@@ -1,3 +1,4 @@
+* Add configurable timeouts from Active Merchant [cody]
 * Update xml_node.rb from XML Node [cody]
 * Update requires_parameters from ActiveMerchant [cody]
 * Sync posts_data.rb with ActiveMerchant [cody]
